# konductor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  mkdocs.yml
.github/workflows/: build-release.yml  conventional-commits.yml  docs.yml  npm-publish.yml  release-please.yml  release.yml  test.yml
.kiro/settings/: lsp.json
.kiro/steering/: product.md  structure.md  tech.md
.konductor/: config.toml  project.md  requirements.md  roadmap.md  state.toml
.konductor/.results/: execute-01-plan-1.toml  execute-01-plan-2.toml  execute-01-plan-3.toml  execute-01-plan-4.toml  execute-01-plan-5.toml  execute-02-plan-1.toml  execute-02-plan-2.toml  execute-03-plan-1.toml  (+8 more)
agents/: konductor-code-reviewer.json  konductor-codebase-mapper.json  konductor-design-reviewer.json  konductor-designer.json  konductor-discoverer.json  konductor-executor.json  konductor-plan-checker.json  konductor-planner.json  konductor-researcher.json  konductor-spec-reviewer.json  konductor-verifier.json  konductor.json
docs/: CNAME  install
docs-site/: commands.md  hooks.md  index.md  troubleshooting.md
hooks/: konductor-hooks.json
konductor-cli/: Cargo.toml
konductor-cli/src/: config.rs  hook.rs  main.rs  mcp.rs  state.rs
konductor-cli/tests/: hooks.rs  mcp_prompts.rs  mcp_tools.rs
konductor-hook/: Cargo.toml
konductor-hook/src/: main.rs
npm/: .npmignore  README.md  package.json
tests/: test_installer.sh
tests/acp-harness/: Cargo.toml
tests/acp-harness/src/: lib.rs
tests/acp-harness/tests/e2e/: api_dynamodb_sam.rs  cli_calculator.rs  main.rs  rest_api_sam.rs
(+99 files in other folders)
