[package]
name = "konductor-hook"
version = "0.1.0"
edition = "2021"
description = "Fast hook binary for Konductor - file tracking and safety guardrails"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
