[package]
name = "acp-harness"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-client-protocol = "0.10"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
